--- a/README.Rmd
+++ b/README.Rmd
@@ -13,7 +13,7 @@ knitr::opts_chunk$set(
 )
 ```
 
-# MDALL
+# MDALL (Molecular Diagnosis of Acute Lymphoblastic Leukemia)
 
 <!-- badges: start -->
 <!-- badges: end -->
